--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="LaslesVPN">
     <meta property="og:description" content="Take control of your online experience with LaslesVPN">
     <meta property="og:image" content="./images/HugeGlobal.png"> 
-    <meta property="og:url" content="https://LaslesVPN.github.io">
+    <meta property="og:url" content="https://anapartsvania.github.io/project/">
     <meta property="og:type" content="website">   
 </head>
 <body>
